:iphone:Fixed overflowing mobile viewport (#19)+:star2:Added Emoji sheet (#20)

--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -110,13 +110,15 @@ a > .category-title, .hamburger > h2 {
   .sidebar{
     position: sticky;
     top: 0;
+    right: 0;
+    left: 0;
     bottom: auto;
     min-height: 0;
     height: auto;
     max-height: 50px;
-    min-width: 100vw;
+    min-width: 100%;
     justify-content: flex-start;
-    padding: 0 20px;
+    padding: 0 5px;
   }
 
   .sidebar > a{
